Bug 514559: Forbid octal literals or escape sequences in strict mode. r=mrbkap